// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Page test cases Client validation check 1`] = `
<span
  class="css-1reg724"
  role="alert"
>
  <span
    class="css-xjluvf"
  >
    Too short, min length: 6
  </span>
</span>
`;

exports[`Login Page test cases Client validation check 2`] = `
<span
  class="css-1reg724"
  role="alert"
>
   
</span>
`;

exports[`Login Page test cases Render check 1`] = `
<div>
  <form>
    <div
      class="css-gbwc6v"
    >
      <section
        class="css-1c469nw"
      >
        <h2>
          Login Page
        </h2>
        <label
          class="css-lnxsde"
          height="8"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Identifier
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1cvyunr"
              name="identifier"
              placeholder="username or email"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <label
          class="css-lnxsde"
          height="8"
          width="20"
        >
          <span
            class="css-1grri41"
          >
            Password
          </span>
          <div
            class="css-11gjszk"
          >
            <input
              class="css-1cvyunr"
              name="password"
              placeholder="password"
              role="textbox"
              type="password"
            />
          </div>
          <span
            class="css-1reg724"
            role="alert"
          >
             
          </span>
        </label>
        <button
          class="css-tp74ot"
          type="submit"
        >
          Login
        </button>
        <h3>
          <a
            class="css-1ghpz66"
            href="/registration"
          >
            Create account
          </a>
        </h3>
      </section>
    </div>
  </form>
</div>
`;
